# flasx

./: .gitignore  Dockerfile  README.md  pyproject.toml
flasx/: main.py
flasx/core/: config.py  deps.py  security.py
flasx/models/: __init__.py  customer_model.py  delivery_staff_model.py  item_model.py  parcel_model.py  station_model.py  user_model.py  vehicle_model.py
flasx/routers/: __init__.py
flasx/routers/v1/: __init__.py  authentication_router.py  customer_router.py  delivery_staff_router.py  hello_router.py  items.py  parcel_router.py  station_router.py  user_router.py  vehicle_router.py
flasx/schemas/: customer_schema.py  delivery_staff_schema.py  item_schema.py  parcel_schema.py  station_schema.py  vehicle_schema.py
tests/: test_customer.py  test_hello.py
