[project]
name = "flasx"
version = "0.1.0"
description = ""
authors = [
    {name = "Pakkaphoom Jindadech",email = "pakkaphoom.pooh123@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
