[project]
name = "flasx"
version = "0.1.0"
description = ""
authors = [
    {name = "Pakkaphoom Jindadech",email = "pakkaphoom.pooh123@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
